--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.2'
+    }
+}
+
 apply plugin: 'com.android.library'
 
 def DEFAULT_COMPILE_SDK_VERSION   = 28
@@ -19,7 +29,19 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    google()
+    jcenter()
+    maven {
+        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+        url "$rootDir/../node_modules/react-native/android"
+    }
+}
+
 dependencies {
+    implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
+    implementation 'org.aspectj:aspectjrt:1.7.3'
     implementation 'com.facebook.react:react-native:+'
     implementation 'com.github.yalantis:ucrop:2.2.2-native'
 }
